--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "next": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "formidable-serverless": "^0.1.2"
+    "formidable": "^2.1.1"
   }
 }
